--- a/Hospital.js/style.css
+++ b/Hospital.js/style.css
@@ -22,6 +22,11 @@ body {
 .topnav {
     background-color: var(--main-color);
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
 }
 
 .topnav a {
@@ -39,19 +44,66 @@ body {
     color: rgb(255, 255, 255);
 }
   
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
+.topnav a.active {
     background-color: var(--vermelho);
     color: var(--branco);
   }
   
-  /* Hide the link that should open and close the topnav on small screens */
   .topnav .icon {
     display: none;
-  }
+}
 
 
-  @media screen and (max-width: 600px) {
+.box {
+  position: relative;
+  width: 325px;
+  height: 400px;
+  border-radius: 20px;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.582);
+}
+
+.box::before {
+  content: '';
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-image: conic-gradient(transparent, transparent, transparent, rgb(0, 0, 255));
+  animation: rotate 4s linear infinite;
+}
+
+.box::after {
+  content: '';
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-image: conic-gradient(transparent, transparent, transparent, rgb(255, 0, 0));
+  animation: rotate 4s linear infinite;
+  animation-delay: 2s;
+}
+
+.span{
+  position: absolute;
+  inset: 5px;
+  border-radius: 16px;
+  z-index: 2;
+}
+
+.conteiner {
+  position: absolute;
+  background-color: rgb(0, 0, 0);
+  inset: 0px;
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+
+@media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
@@ -59,8 +111,7 @@ body {
     }
   }
   
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
