--- a/Hospital.js/style.css
+++ b/Hospital.js/style.css
@@ -48,21 +48,30 @@ body {
     background-color: var(--vermelho);
     color: var(--branco);
   }
-  
-  .topnav .icon {
+
+.topnav .icon {
     display: none;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20vh;
+}
 
 .box {
   position: relative;
   width: 325px;
   height: 400px;
   border-radius: 20px;
-  display: grid;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
   box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.582);
+  margin-bottom: 50px; /* adicione um espaço entre os elementos box */
 }
 
 .box::before {
@@ -70,7 +79,7 @@ body {
   position: absolute;
   width: 500px;
   height: 500px;
-  background-image: conic-gradient(transparent, transparent, transparent, rgb(0, 0, 255));
+  background-image: conic-gradient(transparent, transparent, transparent, white);
   animation: rotate 4s linear infinite;
 }
 
@@ -79,7 +88,7 @@ body {
   position: absolute;
   width: 500px;
   height: 500px;
-  background-image: conic-gradient(transparent, transparent, transparent, rgb(255, 0, 0));
+  background-image: conic-gradient(transparent, transparent, transparent, #eb1010);
   animation: rotate 4s linear infinite;
   animation-delay: 2s;
 }
@@ -102,25 +111,40 @@ body {
   flex-direction: row;
 }
 
+footer{
+  color: rgb(255, 255, 255);
+  font-style: italic;
+  text-align: center;
+}
+
+@keyframes rotate {
+  0%{
+      transform: rotate(0deg);
+  }
+  100%{
+      transform: rotate(360deg);
+  }
+}
 
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
+}
   
 @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: left;
   }
+}
